processed/gerrit/txt/53685.txt
Change:     53685
Subject:    LU-15798 build: fix gcc-11 -Wstringop-overread warnings
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/53685
Change-Id:  I8cafcdfc04957f542dd92c22dfa90bc050a27e23
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      xinliang
Created:    2024-01-16 10:03:13.000000000
Updated:    2024-01-16 13:41:59.000000000
Patch Set:  2
Insertions: +7
Deletions:  -1
Comments:   0 (0 unresolved)
Topic:      LU-15798

--- Reviewers ---
  REVIEWER: Lai Siyao, Andreas Dilger, James Simmons, Shaun Tancheff, xinliang

--- Commit Message ---
LU-15798 build: fix gcc-11 -Wstringop-overread warnings

Gcc-11 detects a -Wstringop-overread warning on using 'strlen' here.
Because string access exceeds the 'struct changelog_rec cr' var size.
This is a false positive here, count the string length manually to
avoid using 'strlen'.

In file included from lustre/include/uapi/linux/lustre/lustre_cfg.h:38,
                 from llog_reader.c:57
In function 'changelog_rec_snamelen',
    inlined from 'print_changelog_rec' at llog_reader.c:834:16:
lustre/include/uapi/linux/lustre/lustre_user.h:2102:16: error: 'strlen'
reading 1 or more bytes from a region of size 0 [-Werror=stringop-overread]
 2102 |         return strlen(changelog_rec_sname(rec));
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from lustre/include/uapi/linux/lustre/lustre_fid.h:41,
                 from llog_reader.c:58:
lustre/include/uapi/linux/lustre/lustre_user.h: In function 'print_changelog_rec':
lustre/include/uapi/linux/lustre/lustre_idl.h:2929:30: note: at offset
[105, 437] into source object 'cr' of size 64
 2929 |         struct changelog_rec cr; /**< Variable length field */
      |                              ^~

Fixes: efc5c8d4de60 ("LU-16335 build: remove _GNU_SOURCE dependency in
		lustre_user.h")
Signed-off-by: Xinliang Liu <xinliang.liu@linaro.org>
Change-Id: I8cafcdfc04957f542dd92c22dfa90bc050a27e23

--- Review History ---

--- Message (xinliang, 2024-01-16 10:03:13.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2024-01-16 10:03:27.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (xinliang, 2024-01-16 10:10:08.000000000) ---
Patch Set 2: Commit message was updated.

--- Message (jenkins, 2024-01-16 10:10:17.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/101405/ : ABORTED

--- Message (wc-checkpatch, 2024-01-16 10:13:38.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (xinliang, 2024-01-16 10:33:38.000000000) ---
Abandoned

This issue can be fixed by patch: https://review.whamcloud.com/c/fs/lustre-release/+/53624
